########################
# Current Developments #
########################

Work toward next release.  Currently under development.

ADDED:

* Added "Log In" / "Log Out" to top menu by default.

CHANGED:

DEPRECATED:

REMOVED:

FIXED:

* Added CSS to prevent scrollbars from appearing on the CAT-SOOP logo in page
  footers.

SECURITY:

DOCUMENTATION:


##################
# Version 11.1.1 #
##################

ADDED:

* Added the 'legacy' grading mode, which does not use the asynchronous checker.

CHANGED:

* Separated checker results into subdirectories to prevent a single directory
  growing too large.

* Helper scripts are now launched using sys.executable, rather than a
  hard-coded "python3".

* Checks run through the asynchronous checker now cache their results in the
  problemstate directory, to avoid having to do a double-lookup.

* Attempts at improved error reporting throughout CAT-SOOP.

REMOVED:

* Removed the PKiller class, which is no longer used anywhere.

FIXED:

* Temporary workaround for automatic scrolling to location of anchor.

* Fixed a bug with username/password-based access to the get_user_information
  API endpoint.

* Fixed a bug with the name of uploaded files.

SECURITY:

* The current session ID and API token are now filtered from error messages.

DOCUMENTATION:

* Added (hopefully) meaningful docstrings to almost everything in the codebase.


##################
# Version 11.1.0 #
##################

ADDED:

* Added cheroot (https://github.com/cherrypy/cheroot) as a catsoop.tools
  package.

* Added websockets (https://github.com/aaugustin/websockets) as a catsoop.tools
  package.

CHANGED:

* cheroot is now used instead of uWSGI.

* File names for uploaded files now include the csq_name of the question they
  were uploaded for.

FIXED:

* Fixed an issue whereby the Python sandbox could leave handles to deleted
  files open (eventually leading to an error from having too many files open).
